feat: add frontend functions

--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
       <form>
         <label for="prompt"></label>
         <textarea id="prompt" name="prompt" rows="1" cols="1" placeholder="Ask Codex..."></textarea>
+        <button type="submit"><img src="assets/send.svg" alt="send" /></button>
       </form>
     </div>
     <script type="module" src="script.js"></script>
